--- a/card-product.html
+++ b/card-product.html
@@ -339,15 +339,15 @@
 						</div>	
 						<div class="card-desc-data">
 							<div class="desc-data-top">
-								<ul>
-									<li><a href="#" class="dest-link-active">Описание</a></li>                  
-									<li><a href="#">Характеритиски</a></li>
-									<li><a href="#">Как купить</a></li>
-									<li><a href="#">Отзывы</a></li>
+								<ul class="desc-tabs">
+									<li class="desc-tabs-el"><a href="#desc-tab1" class="desk-link">Описание</a></li>             
+									<li class="desc-tabs-el" ><a href="#desc-tab2" class="desk-link">Характеритиски</a></li>
+									<li class="desc-tabs-el"><a href="#desc-tab3" class="desk-link">Как купить</a></li>
+									<li class="desc-tabs-el"><a href="#desc-tab4" class="desk-link">Отзывы</a></li>
 								</ul>
 							</div>
 							<div class="desc-data-center">
-								<div class="about-card">
+								<div id="desc-tab1" class="about-card">
 									<h3>Усиленный полужесткий пояс для пояснично-крестцового отдела спины Lumbitron Elite Duo LTG-305 Orliman, Испания</h3>
 									<p>Lumbitron Elite Duo LTG-305 - обновленный <span class="highlighted-text">усиленный пояснично-крестцовый корсет</span> анатомической формы с полужесткой фиксацией. Воздухопроницаемый эластичный материал пояса обеспечивает равномерную компрессию и идеальную посадку. Отличительная особенность модели - дополнительный фиксатор (см. на фото ниже), обеспечивающий максимальную утяжку и поддержку. Корсет выполнен по специальной бесшовной технологии. Отсутствие швов предотвращает раздражение кожи и потерю компрессии в отдельных участках. Дополнительное усиление придают полужесткие анатомические отмоделированные ребра в зоне наибольшей компрессии. Корсет очень легкий, малозаметный под одеждой и очень практичный.</p>
 									<p>Высота спереди - 17 см.  Высота сзади - 26 см.</p>
@@ -402,6 +402,9 @@
 										<li>Улучшение проприоцепции. </li>
 									</ul>
 								</div>
+								<div id="desc-tab2" class="about-card"></div>
+								<div id="desc-tab3" class="about-card"></div>
+								<div id="desc-tab4" class="about-card"></div>
 								<div class="card-reviews">
 									<div class="card-reviews-top">
 										<span>Отызывы (5)</span>
@@ -682,6 +685,9 @@
 								<span class="product-price">691 <span class="product-currency">грн.</span></span>
 							</div>
 						</div>
+					</div>
+					<div class="main-block-border">
+						<div></div>
 					</div>
 				</div>
 				<div class="main-bottom">
