--- a/category-tile.html
+++ b/category-tile.html
@@ -471,6 +471,9 @@
 							<a href="#">Оставить отзыв</a>
 						</div>
 					</div>
+					<div class="main-block-border">
+						<div></div>
+					</div>
 				</div>
 				<div class="main-bottom">
 					<ul>
