--- a/category.html
+++ b/category.html
@@ -188,7 +188,18 @@
 										<li><label class="label-f" for="average-size3"><input type="checkbox" id="average-size3" class="checkbox-filter"><span class="checkbox-filter-custom"></span><span">2,4 мкм</span></label></li>
 										<li><label class="label-f" for="average-size4"><input type="checkbox" id="average-size4" class="checkbox-filter"><span class="checkbox-filter-custom"></span><span">2,44 мкм</span></label></li>
 										<li><label class="label-f" for="average-size5"><input type="checkbox" id="average-size5" class="checkbox-filter"><span class="checkbox-filter-custom"></span><span">2,6 мкм</span></label></li>
-										<li><a href="#" class="yet-link">Еще (8)</a></li>
+										<li class="yet-li"><label class="label-f" for="average-size6"><input type="checkbox" id="average-size6" class="checkbox-filter"><span class="checkbox-filter-custom"></span><span"></span></label></li>
+										<li class="yet-li"><label class="label-f" for="average-size7"><input type="checkbox" id="average-size7" class="checkbox-filter"><span class="checkbox-filter-custom"></span><span"></span></label></li>
+										<li class="yet-li"><label class="label-f" for="average-size8"><input type="checkbox" id="average-size8" class="checkbox-filter"><span class="checkbox-filter-custom"></span><span"></span></label></li>
+										<li class="yet-li"><label class="label-f" for="average-size9"><input type="checkbox" id="average-size9" class="checkbox-filter"><span class="checkbox-filter-custom"></span><span"></span></label></li>
+										<li class="yet-li"><label class="label-f" for="average-size10"><input type="checkbox" id="average-size10" class="checkbox-filter"><span class="checkbox-filter-custom"></span><span"></span></label></li>
+										<li class="yet-li"><label class="label-f" for="average-size11"><input type="checkbox" id="average-size11" class="checkbox-filter"><span class="checkbox-filter-custom"></span><span"></span></label></li>
+										<li class="yet-li"><label class="label-f" for="average-size12"><input type="checkbox" id="average-size12" class="checkbox-filter"><span class="checkbox-filter-custom"></span><span"></span></label></li>
+										<li class="yet-li"><label class="label-f" for="average-size13"><input type="checkbox" id="average-size13" class="checkbox-filter"><span class="checkbox-filter-custom"></span><span"></span></label></li>
+										<li class="yet-li-last">
+											<img src="img/marker1.png" class="yet-li-img" alt="">
+											<a href="#" class="yet-link">Еще (8)</a>
+										</li>
 									</ul>
 								</div>
 								<div class="particle-size">
@@ -350,7 +361,7 @@
 									<span>Запчасти для небулайзера</span>
 								</div>
 							</div>
-							<div class="list-elem">
+							<div id="list-elem1" class="list-elem">
 								<div class="list-elem-img" style="background-image: url(img/list-elem1.png);">
 									<img src="img/hit-sale.png" alt="">
 								</div>
@@ -361,7 +372,7 @@
 											<a href="#">Купить</a>
 										</div>
 										<div class="list-elem-tr">
-											<h4>Юлайзер Хоум (Ulaizer Home CN-02MY) + Детская маска</h4>
+											<a href="#list-elem1">Юлайзер Хоум (Ulaizer Home CN-02MY) + Детская маска</a>
 											<div class="rating-box">
 												<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
 												<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
@@ -402,7 +413,7 @@
 									</div>
 								</div>	
 							</div>
-							<div class="list-elem">
+							<div id="list-elem2" class="list-elem">
 								<div class="list-elem-img" style="background-image: url(img/list-elem2.png);">
 									<img src="img/stock.png" alt="">
 								</div>
@@ -413,7 +424,7 @@
 											<a href="#">Купить</a>
 										</div>
 										<div class="list-elem-tr">
-											<h4>Небулайзер OMRON A3 Complete (NE-C300-UK)</h4>
+											<a href="#list-elem2">Небулайзер OMRON A3 Complete (NE-C300-UK)</a>
 											<div class="rating-box">
 												<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
 												<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
@@ -524,7 +535,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="list-elem">
+							<div id="list-elem3" class="list-elem">
 								<div class="list-elem-img" style="background-image: url(img/list-elem3.png);">
 									<img src="img/stock7.png" class="stock7" alt="">
 								</div>
@@ -536,7 +547,7 @@
 											<a href="#">Купить</a>
 										</div>
 										<div class="list-elem-tr">
-											<h4>Ингалятор Gamma Effect Max (Эффект Макс)</h4>
+											<a href="#list-elem3">Ингалятор Gamma Effect Max (Эффект Макс)</a>
 											<div class="rating-box">
 												<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
 												<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
@@ -577,7 +588,7 @@
 									</div>
 								</div>	
 							</div>
-							<div class="list-elem">
+							<div id="list-elem4" class="list-elem">
 								<div class="list-elem-img" style="background-image: url(img/list-elem4.png);">
 									<img src="img/klas.png" class="klas" alt="klas">
 								</div>
@@ -585,10 +596,10 @@
 									<div class="list-elem-top">
 										<div class="list-elem-buy not-available">
 											<span>1,899 <span class="list-elem-currency">грн.</span></span>
-											<a href="#">Сообщить<br> когда появится</a>
+											<a href="#list-elem4">Сообщить<br> когда появится</a>
 										</div>
 										<div class="list-elem-tr">
-											<h4 class="title-not-available">Небулайзер OMRON A3 Complete (NE-C300-UK)</h4>
+											<a href="#" class="title-not-available">Небулайзер OMRON A3 Complete (NE-C300-UK)</a>
 											<div class="rating-box">
 												<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
 												<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
@@ -629,7 +640,7 @@
 									</div>
 								</div>	
 							</div>
-							<div class="list-elem">
+							<div id="list-elem5" class="list-elem">
 								<div class="list-elem-img" style="background-image: url(img/list-elem1.png);">
 								</div>
 								<div class="list-elem-main">
@@ -639,7 +650,7 @@
 											<a href="#">Купить</a>
 										</div>
 										<div class="list-elem-tr">
-											<h4>Юлайзер Хоум (Ulaizer Home CN-02MY) + Детская маска</h4>
+											<a href="#list-elem5">Юлайзер Хоум (Ulaizer Home CN-02MY) + Детская маска</a>
 											<div class="rating-box">
 												<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
 												<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
@@ -680,7 +691,7 @@
 									</div>
 								</div>	
 							</div>
-							<div class="list-elem">
+							<div id="list-elem6" class="list-elem">
 								<div class="list-elem-img" style="background-image: url(img/list-elem1.png);">
 								</div>
 								<div class="list-elem-main">
@@ -690,7 +701,7 @@
 											<a href="#">Купить</a>
 										</div>
 										<div class="list-elem-tr">
-											<h4>Юлайзер Хоум (Ulaizer Home CN-02MY) + Детская маска</h4>
+											<a href="#list-elem6">Юлайзер Хоум (Ulaizer Home CN-02MY) + Детская маска</a>
 											<div class="rating-box">
 												<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
 												<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
@@ -731,7 +742,7 @@
 									</div>
 								</div>	
 							</div>
-							<div class="list-elem">
+							<div id="list-elem7" class="list-elem">
 								<div class="list-elem-img" style="background-image: url(img/list-elem1.png);">
 								</div>
 								<div class="list-elem-main">
@@ -741,7 +752,7 @@
 											<a href="#">Купить</a>
 										</div>
 										<div class="list-elem-tr">
-											<h4>Юлайзер Хоум (Ulaizer Home CN-02MY) + Детская маска</h4>
+											<a href="#list-elem7">Юлайзер Хоум (Ulaizer Home CN-02MY) + Детская маска</a>
 											<div class="rating-box">
 												<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
 												<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
@@ -782,7 +793,7 @@
 									</div>
 								</div>	
 							</div>
-							<div class="list-elem">
+							<div id="list-elem8" class="list-elem">
 								<div class="list-elem-img" style="background-image: url(img/list-elem1.png);">
 								</div>
 								<div class="list-elem-main">
@@ -792,7 +803,7 @@
 											<a href="#">Купить</a>
 										</div>
 										<div class="list-elem-tr">
-											<h4>Юлайзер Хоум (Ulaizer Home CN-02MY) + Детская маска</h4>
+											<a href="#list-elem8">Юлайзер Хоум (Ulaizer Home CN-02MY) + Детская маска</a>
 											<div class="rating-box">
 												<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
 												<div class="rating-box-elem"><i class="fa fa-star rat-active"></i></div>
@@ -928,6 +939,9 @@
 							<span>Отзывы покупателей</span>
 							<a href="#">Оставить отзыв</a>
 						</div>
+					</div>
+					<div class="main-block-border">
+						<div></div>
 					</div>
 				</div>
 				<div class="main-bottom">
