--- a/index.html
+++ b/index.html
@@ -196,14 +196,14 @@
 						</div>
 					</div>
 					<div class="product-line">
-						<ul>
-							<li><a href="#" class="product-activ-link">Для вдохновения</a></li>
+						<ul class="prod-tabs">
+							<li class="prod-tabs-el"><a href="#prod-tab1">Для вдохновения</a></li>
 							<li><div class="delimiter"></div></li>
-							<li><a href="#">Инголяторы</a></li>
+							<li class="prod-tabs-el"><a href="#prod-tab2">Инголяторы</a></li>
 							<li><div class="delimiter"></li>
-							<li><a href="#">Солевые грелки</a></li>
+							<li class="prod-tabs-el"><a href="#prod-tab3">Солевые грелки</a></li>
 						</ul>
-						<div class="product-centre">
+						<div id="prod-tab1" class="product-centre">
 							<div class="product-centre-elem">
 								<div class="prod-img" style="background-image: url(img/product-el1.png);"></div>
 								<span>Корректор осанки с ребрами жесткости Модель 2011</span>
@@ -264,6 +264,12 @@
 								</div>
 								<span class="product-price">925 <span class="product-currency">грн.</span></span>
 							</div>
+						</div>
+						<div id="prod-tab2" class="product-centre">
+						
+						</div>
+						<div id="prod-tab3" class="product-centre">
+						
 						</div>
 					</div>
 					<div class="advantages">
@@ -450,6 +456,9 @@
 							<p>Мы можем доставить купленный Вами товар любым удобным для Вас способом. Доставка по городу Николаеву осуществляется БЕСПЛАТНО (при покупки на сумму свыше 1000 грн.)! Доставка по городу Киеву осуществляется БЕСПЛАТНО (при покупки на сумму свыше 1500 грн.)! Подробней о Доставке читайте на странице "Доставка"</p>
 							<a href="#">читать полностью</a>
 						</div>
+					</div>
+					<div class="main-block-border">
+						<div></div>
 					</div>
 				</div>
 				<div class="main-bottom">
